--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,21 +1,22 @@
 [versions]
 com-android-application = "8.1.0-alpha10"
-org-jetbrains-kotlin-android = "1.7.20"
+org-jetbrains-kotlin-android = "1.8.0"
 core-ktx = "1.9.0"
 junit = "4.13.2"
 androidx-test-ext-junit = "1.1.5"
 espresso-core = "3.5.1"
-lifecycle-runtime-ktx = "2.3.1"
-activity-compose = "1.6.1"
-compose-bom = "2022.10.00"
+lifecycle-runtime-ktx = "2.6.1"
+activity-compose = "1.7.0"
+compose-bom = "2023.03.00"
 kapt-version = "1.6.20"
 #Hilt Versions
-hilt-version = "2.44.2"
+hilt-version = "2.45"
 hilt-navigation = "1.0.0"
 #Retrofit Versions
 retrofit = "2.9.0"
 ok-http = "5.0.0-alpha.2"
-flowLayout = "0.17.0"
+flowLayout = "0.25.1"
+navigtion-compose = "2.5.3"
 
 [libraries]
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
@@ -32,6 +33,7 @@ ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview
 ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 material3 = { group = "androidx.compose.material3", name = "material3" }
+navigtion-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigtion-compose" }
 #Hilt Dependencies
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt-version" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt-version" }
